# morse

./: .gitignore  CMakeLists.txt  README.md  dat5  datei2.txt  nw  test.txt
include/: io.h  morse.h  options.h
source/: main  main.c
src/: io.c  main.c  morse.c  options.c
